fix(components): shell header item alignment

--- a/packages/components/src/shell/element.css
+++ b/packages/components/src/shell/element.css
@@ -52,7 +52,3 @@ bp-drawer {
   padding: var(--padding, 24px);
   scroll-padding-top: var(--padding, 24px);
 }
-
-::slotted([bp-layout*='inline:end']) {
-  margin-left: auto !important;
-}
